property logic commit